Try to fix designer on mobile.

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -38,11 +38,18 @@ html {
     }    
 
     #app {
-        position: absolute;        
+        position: fixed;        
         top: 0;
         left:0;
         width: 100vw;
         height: 100vw;
-        touch-action: pan-y;
+        touch-action: none;
+    }
+
+    #app iframe {
+        position: fixed;        
+        top: 0;
+        left:0;
+        touch-action: none;
     }
 }
